data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1101.wast
;; 2. **Test Description:**    - **Scenario:** Insert the `unreachable` instruction within an `if` condition that should never be true.    - **Constraint Checked:** Confirms that when the condition unexpectedly becomes true, a trap occurs due to the `unreachable` instruction.    - **Relation to Unreachable Code Execution:** Tests if an incorrect condition could erroneously lead to executing the `unreachable` instruction.

(assert_invalid
  (module (func $test_unreachable_in_if
    (if (i32.const 0)
      (then
        (unreachable)
      )
    )
    (i32.const 1)
  ))
  "type mismatch"
)